--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
   cupertino_icons: ^1.0.1
+  flutter_open_whatsapp: ^0.1.2
+  
   sqflite: ^1.3.2+2
 
 dev_dependencies:
@@ -42,8 +45,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
