--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  contacts_service: ^0.6.1
   cupertino_icons: ^1.0.1
   flutter_open_whatsapp: ^0.1.2
-  
+  permission_handler: ^8.1.4+1
   sqflite: ^1.3.2+2
 
 dev_dependencies:
